--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,16 @@ android {
         exclude 'lib/x86/librsjni.so'
         exclude 'lib/x86/libRSSupport.so'
     }
+
+    // 解决 native libraries 不支持cpu的体系结构。允许模拟器调试
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a','x86_64'
+            universalApk true
+        }
+    }
 }
 
 dependencies {
