kakee 更改实时数据

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.PlantsDetailActivity"
-            android:label="@string/title_activity_plants_detail"></activity>
+            android:label="@string/title_activity_plants_detail" />
+        <activity
+            android:name=".activity.PlantsStatusActivity"
+            android:label="@string/title_activity_plants_status"></activity>
     </application>
 
 </manifest>
