--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,8 +58,8 @@
             android:name=".activity.PlantsStatusActivity"
             android:label="@string/title_activity_plants_status" />
         <activity android:name=".activity.VersionActivity" />
-        <activity android:name=".activity.ResActivity" />
-        <activity android:name=".activity.RePwdActivity" />
+        <activity android:name=".activity.PersonRegisterActivity" />
+        <activity android:name=".activity.PersonChangePwdActivity" />
         <activity android:name=".activity.PersonInfoActivity"></activity>
     </application>
 
