--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        tools:replace="android:icon"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:icon">
         <activity
             android:name=".activity.SplashActivity"
             android:label="@string/app_name"
@@ -62,7 +62,12 @@
         <activity android:name=".activity.VersionActivity" />
         <activity android:name=".activity.PersonRegisterActivity" />
         <activity android:name=".activity.PersonChangePwdActivity" />
-        <activity android:name=".activity.PersonInfoActivity"></activity>
+        <activity android:name=".activity.PersonInfoActivity" />
+
+        <service
+            android:name=".service.MyEnvStatusService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
