yanxu  增加故障检测功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,8 @@
         <activity android:name=".activity.PersonRegisterActivity" />
         <activity android:name=".activity.PersonChangePwdActivity" />
         <activity android:name=".activity.PersonInfoActivity" />
+        <activity android:name=".activity.FailureWarnActivity">
+        </activity>
 
         <service
             android:name=".service.MyEnvStatusService"
