yanxu  修改阈值设置、环境报警位置

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
             android:exported="true" />
 
         <activity android:name=".activity.WebViewActivity" />
+        <activity android:name=".activity.EnvWarnActivity"></activity>
     </application>
 
 </manifest>
