yanxu  详情信息页面添加删除更新按钮，主页面滑动栏去掉

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,11 @@
             android:exported="true" />
 
         <activity android:name=".activity.WebViewActivity" />
-        <activity android:name=".activity.EnvWarnActivity"></activity>
+        <activity android:name=".activity.EnvWarnActivity" />
+        <activity android:name=".activity.ValueSetActivity">
+
+
+        </activity>
     </application>
 
 </manifest>
