yanxu  在植物详情界面增加删除、更新功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,10 +72,8 @@
 
         <activity android:name=".activity.WebViewActivity" />
         <activity android:name=".activity.EnvWarnActivity" />
-        <activity android:name=".activity.ValueSetActivity">
-
-
-        </activity>
+        <activity android:name=".activity.ValueSetActivity"></activity>
+        <activity android:name=".activity.PlantUpdateActivity"></activity>
     </application>
 
 </manifest>
