--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,7 @@
         <activity android:name=".activity.EnvWarnActivity" />
         <activity android:name=".activity.ValueSetActivity"></activity>
         <activity android:name=".activity.PlantUpdateActivity"></activity>
+        <activity android:name=".activity.EnvHistoryActivity"></activity>
     </application>
 
 </manifest>
